syntax = "proto3";
package cashmere;

enum CalendarType{
  Specified = 0;
  Scripted = 1;
}

message Calendar{
  CalendarType type = 1;
  // {"year"| "month"| "week"}
  string every = 2;
  // {"day": day, "hour": hour, "minute": minute}
  map<string, string> daytime = 3;
}

message NewCalendarRequest{
  int32 manage_id = 1;
  string entity_id = 2;
  Calendar calendar = 3;
  string description = 4;
}
message NewCalendarResponse{
  // 成功返回新日历编码，失败返回信息
  string result = 1;
}

message GetCalendarsRequest{
  int32 manage_id = 1;
  string entity_id = 2;
}
message GetCalendarsResponse{
  // 成功返回日历列表，失败返回信息
  repeated bytes calendars = 1;
}