syntax = "proto3";
package cashmere;

enum FieldDataType{
  // protobuf 类型
  FIELD_DATAYTYPE_UNKNOWN = 0;
  FIELD_DATATYPE_DOUBLE = 1;
  FIELD_DATATYPE_FLOAT = 2;
  FIELD_DATATYPE_INT32 = 3;
  FIELD_DATATYPE_INT64 = 4;
  FIELD_DATATYPE_UINT32 = 5;
  FIELD_DATATYPE_UINT64 = 6;
  FIELD_DATATYPE_SINT32 = 7;
  FIELD_DATATYPE_SINT64 = 8;
  FIELD_DATATYPE_FIXED32 = 9;
  FIELD_DATATYPE_FIXED64 = 10;
  FIELD_DATATYPE_SFIXED32    = 11;
  FIELD_DATATYPE_SFIXED64    = 12;
  FIELD_DATATYPE_BOOL   = 13;
  FIELD_DATATYPE_STRING = 14;
  FIELD_DATATYPE_BYTES = 15;

  // 自定义类型
  // 范围
  FIELD_DATATYPE_RANGE = 16;
  // vec2
  FIELD_DATATYPE_VEC2 = 17;
  // vec3
  FIELD_DATATYPE_VEC3 = 18;
  // vec4
  FIELD_DATATYPE_VEC4 = 19;
  // 时间
  FIELD_DATATYPE_TIME = 20;
}
